[146] [Composebox] Fix close button visibility
Original change's description:
> [Composebox] Fix close button visibility
> 
> The cancel button within the compose box was not always clickable
> because it was being overlapped by other elements. Adding `z-index: 2`
> to the `.cancel-button` style ensures it is rendered above other
> elements in the stacking order, making it consistently visible and
> interactive. Additionally, styles have been added for the file carousel
> when in the `.top` state. This includes adjusting the right padding of
> the file chip and the end margin of the carousel container to improve
> spacing and alignment.
> 
> Screencast (Before): http://screencast/cast/NDg5MjU1NzkyOTYxMTI2NHwwOTg0ODRkNC1iMg
> Screencast (After): http://screencast/cast/NjAzNjM2MDkzNzg2NTIxNnwwOWU4MWFlMi0yNA
> 
> Fixed: b:488073062
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7614719
> Commit-Queue: Devi Varaprasad Jonnala <jonnalad@google.com>
> Cr-Commit-Position: refs/heads/main@{#1591846}

Bug: 488836444
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7624560
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7680@{#1801}
Cr-Branched-From: 76b7d80e5cda23fe6537eed26d68c92e995c7f39-refs/heads/main@{#1582197}

--- a/ui/webui/resources/cr_components/composebox/file_carousel.css
+++ b/ui/webui/resources/cr_components/composebox/file_carousel.css
@@ -70,3 +70,11 @@
 :host([enable-scrolling]) .file-carousel-container::-webkit-scrollbar-button {
   display: none;
 }
+
+:host(.top) {
+  --file-chip-padding-right: 12px;
+}
+
+:host(.top) .file-carousel-container {
+  margin-inline-end: var(--context-carousel-inline-end-spacing, 0);
+}
